# TKBEN-tokenizers-benchmarker

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup_and_maintenance.bat  start_on_windows.bat
.agent/: ARCHITECTURE.md  GUIDELINES_PYTHON.md  GUIDELINES_TESTS.md  GUIDELINES_TYPESCRIPT.md  README_WRITING.md
.agent/rules/: GENERAL_RULES.md  PACKAGING_AND_RUNTIME_MODES.md
.github/workflows/: ci.yml  desktop-release.yml
TKBEN/: setup_and_maintenance.bat  start_on_windows.bat
TKBEN/app/: app.py  configuration.py  constants.py  logger.py  variables.py
TKBEN/client/: index.html  package-lock.json  package.json  vite.config.ts
TKBEN/scripts/: initialize_database.py
TKBEN/server/: __init__.py  app.py
TKBEN/settings/: .env  .env.cloud.example  .env.local.example  .env.local.tauri.example  configurations.json  server_configurations.json
TKBEN_desktop/app/: app.py
TKBEN_webapp/: setup_and_maintenance.bat  start_on_windows.bat
TKBEN_webapp/client/: vite.config.ts
TKBEN_webapp/server/: app.py
TKBEN_webapp/settings/: .env  server_configurations.json
TokenBenchy/: setup_and_maintenance.bat  start_on_windows.bat
TokenBenchy/app/: app.py  configuration.py  constants.py  logger.py  variables.py
TokenBenchy/benchmarks/: perform_benchmarks.py  validate_benchmarks.py
TokenBenchy/commons/: configuration.py  configurations.py  constants.py  logger.py  variables.py
TokenBenchy/setup/: requirements.txt
TokenExplorer/: TokenExplorer.bat  start_on_windows.bat  tokenizer_exploration.ipynb
TokenExplorer/benchmarks/: perform_benchmarks.py  validate_benchmarks.py
TokenExplorer/commons/: constants.py  logger.py  main.py  variables.py
TokenExplorer/exploration/: visualize_tokenizers.ipynb
TokenExplorer/settings/: app_configurations.json  configurations.json
app/client/: package.json  vite.config.ts
app/scripts/: initialize_database.py
app/server/: __init__.py  app.py  pyproject.toml
app/shared/: openapi.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/tests/: conftest.py  run_tests.bat
docker/: backend.Dockerfile  frontend.Dockerfile
scripts/: environment_setup.bat  package_setup.bat  remove_logs.bat
settings/: .env  .env.example  configurations.json
setup/: TOKENEXP_installer.bat  install_on_windows.bat  setup_and_maintenance.bat
tests/: conftest.py  run_tests.bat
(+502 files in other folders)
