[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "TKBEN"
version = "2.1"
requires-python = ">=3.14"
dependencies = [  
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "tqdm==4.67.1",
    "SQLAlchemy==2.0.46",
    "psycopg[binary]==3.3.1",
    "python-dotenv==1.2.1",  
    "python-multipart>=0.0.21",   
    "cryptography>=46.0.2",
    "transformers==4.57.3",
    "sentencepiece==0.2.1",
    "datasets==4.5.0",
    "sacremoses==0.1.1",   
    "hf-xet==1.1.10",  
    "matplotlib==3.10.8",
    "seaborn==0.13.2"    
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["TKBEN"] 

